Bug 414601 - Scanner resolutions cannot be set externally to values >= 1000 DPI
Summary: Scanner resolutions cannot be set externally to values >= 1000 DPI
Status: RESOLVED FIXED
Alias: None
Product: libksane
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-28 12:37 UTC by Anton Arnold
Modified: 2019-12-11 21:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Arnold 2019-11-28 12:37:34 UTC
Scanner resolutions cannot be set externally to values >= 1000.
This behavior can be seen if skanlite tries to restore the previous values and the resolution option is set to the default value instead.

The reason is the group separator character for big numbers (1,000.0 or 1.000,0) that is not handled correctly.
Comment 1 Kåre Särs 2019-12-11 21:45:17 UTC
Git commit 992fd7c77d75c6267b615a3e9e982349639b9e51 by Kåre Särs, on behalf of Anton Arnold.
Committed on 11/12/2019 at 21:45.
Pushed by sars into branch 'master'.

Fix color-options layout & KSaneOptCombo::setValue()

Summary:
Related: bug 414602

This diff contains bugfixes that I fixed while developing the scan area+option ordering enhancements but are not related directly to them.

The items in the color layout where not updated correctly.
Remove the group separator before trying to write a value to a combo-box option.

Reviewers: sars, #kde_applications

Reviewed By: sars

Subscribers: aacid

Differential Revision: https://phabricator.kde.org/D25588

M  +3    -3    src/ksanewidget_p.cpp
M  +3    -2    src/options/ksaneoptcombo.cpp

https://commits.kde.org/libksane/992fd7c77d75c6267b615a3e9e982349639b9e51
Comment 2 Kåre Särs 2019-12-11 21:46:56 UTC
Git commit 3130174cae4e0410c7eef605a43a14550cd29e8a by Kåre Särs, on behalf of Anton Arnold.
Committed on 11/12/2019 at 21:46.
Pushed by sars into branch 'release/19.12'.

Fix color-options layout & KSaneOptCombo::setValue()

Summary:
Related: bug 414602

This diff contains bugfixes that I fixed while developing the scan area+option ordering enhancements but are not related directly to them.

The items in the color layout where not updated correctly.
Remove the group separator before trying to write a value to a combo-box option.

Reviewers: sars, #kde_applications

Reviewed By: sars

Subscribers: aacid

Differential Revision: https://phabricator.kde.org/D25588

M  +3    -3    src/ksanewidget_p.cpp
M  +3    -2    src/options/ksaneoptcombo.cpp

https://commits.kde.org/libksane/3130174cae4e0410c7eef605a43a14550cd29e8a