Fix color-options layout & KSaneOptCombo::setValue()

Summary:
BUG: 414601
BUG: 414602

This diff contains bugfixes that I fixed while developing the scan area+option ordering enhancements but are not related directly to them.

The items in the color layout where not updated correctly.
Remove the group separator before trying to write a value to a combo-box option.

Reviewers: sars, #kde_applications

Reviewed By: sars

Subscribers: aacid

Differential Revision: https://phabricator.kde.org/D25588